# TemperatureMonitor

./: CMakeLists.txt  README.md
inc/: Controller.hpp  Heater.hpp  ISensor.hpp  Temperature.hpp  TemperatureSensor.hpp
inc/hal/: SPI.hpp  TransportLayer.hpp
src/: Controller.cpp  Heater.cpp  main.cpp
tests/: MockHeater.hpp  MockTransportLayer.hpp  SystemTest.cpp  Temperature_test.cpp
